{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 24,
  "lineage": "d199fd6c-f857-ef24-92b7-0623b3b49d33",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frank_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:612731685535:instance/i-0dd9afca568e02302",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd9afca568e02302",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "frank_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebbebbd671c1a8f5",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "3.80.4.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04de0767c79a5d407",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c20cef91d780bfc",
            "tags": {
              "Name": "PublicInstance"
            },
            "tags_all": {
              "Name": "PublicInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e39a081075a19b19"
            ]
          },
          "dependencies": [
            "aws_key_pair.frank_kp",
            "aws_security_group.security_group04",
            "aws_subnet.subnet_frank_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_frank",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:internet-gateway/igw-020c054b486232b55",
            "id": "igw-020c054b486232b55",
            "owner_id": "612731685535",
            "tags": {
              "Name": "DemoClase04-igw"
            },
            "tags_all": {
              "Name": "DemoClase04-igw"
            },
            "vpc_id": "vpc-0a63cc6876c8090c6"
          },
          "dependencies": [
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_frank",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:route-table/rtb-0aa72fbc8df77b9af",
            "id": "rtb-0aa72fbc8df77b9af",
            "owner_id": "612731685535",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020c054b486232b55",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a63cc6876c8090c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_frank",
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a566e8403f56b196",
            "route_table_id": "rtb-0aa72fbc8df77b9af",
            "subnet_id": "subnet-08c20cef91d780bfc"
          },
          "dependencies": [
            "aws_internet_gateway.igw_frank",
            "aws_route_table.rt_frank",
            "aws_subnet.subnet_frank_public",
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:security-group/sg-0e39a081075a19b19",
            "description": "Demo Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e39a081075a19b19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "10.0.2.0/24",
            "name_prefix": "",
            "owner_id": "612731685535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "10.0.2.0/24"
            },
            "tags_all": {
              "Name": "10.0.2.0/24"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a63cc6876c8090c6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_frank_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:subnet/subnet-0b073ef6cb06745cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b073ef6cb06745cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "612731685535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPrivate"
            },
            "tags_all": {
              "Name": "SubnetPrivate"
            },
            "vpc_id": "vpc-0a63cc6876c8090c6"
          },
          "dependencies": [
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_frank_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:subnet/subnet-08c20cef91d780bfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c20cef91d780bfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612731685535",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SubnetPublic"
            },
            "tags_all": {
              "Name": "SubnetPublic"
            },
            "vpc_id": "vpc-0a63cc6876c8090c6"
          },
          "dependencies": [
            "aws_vpc.vpc_frank"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_frank",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612731685535:vpc/vpc-0a63cc6876c8090c6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0766dd0017b40eb44",
            "default_route_table_id": "rtb-02f9348ef47dd1038",
            "default_security_group_id": "sg-0da8266b9caa1ab78",
            "dhcp_options_id": "dopt-0347c9adbdb85a00b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a63cc6876c8090c6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f9348ef47dd1038",
            "owner_id": "612731685535",
            "tags": {
              "Name": "DemoClase04"
            },
            "tags_all": {
              "Name": "DemoClase04"
            }
          }
        }
      ]
    }
  ]
}